--- a/templates/bankProfile.html
+++ b/templates/bankProfile.html
@@ -19,12 +19,16 @@
        folder instead of downloading all of them to reduce the load. -->
     <link href="{{ url_for('static', filename='dist/css/skins/_all-skins.min.css') }}" rel="stylesheet">
 
+
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+
+
 
 
     <!-- Google Translate Element begin -->
@@ -278,8 +282,8 @@
 
         {% if messages %}
             {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                {{ message }}
+                <div class="alert alert-{{ category }}  " style="opacity:0.6;" >
+                    <div style="opacity:100%;" > {{ message }} </div>
                 </div>
 
             {% endfor %}
