--- a/templates/email.html
+++ b/templates/email.html
@@ -203,7 +203,7 @@
 
         {% if messages %}
             {% for category, message in messages %}
-                <div class="alert alert-{{ category }} style="font-size:160%;"">
+                <div class="alert alert-{{ category }}" style="font-size:160%;">
                 {{ message }}
                 </div>
 
