--- a/templates/BussinseRuleGuide.html
+++ b/templates/BussinseRuleGuide.html
@@ -29,7 +29,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-
+<script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
      <!-- For embdding code -->
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 
@@ -343,7 +343,7 @@
 
               <div class="box-footer">
               <div style="margin-left:30%;">
-                <a href= "{{ url_for('send_file') }}" class="btn btn-default" >Download Sample &nbsp;  <i class="fa fa-save"></i></a>
+                <a href= "/return-file/" class="btn btn-default" >Download Sample &nbsp;  <i class="fa fa-save"></i></a>
 
               </div>
               </div>
@@ -395,7 +395,6 @@
     });
 </script>
 
-<script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 
 
 
